--- a/trackmyclass/pubspec.yaml
+++ b/trackmyclass/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^8.0.1
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.0
 
 dev_dependencies:
   flutter_test:
