--- a/trackmyclass/pubspec.yaml
+++ b/trackmyclass/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   google_fonts: ^8.0.1
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
