--- a/trackmyclass/pubspec.yaml
+++ b/trackmyclass/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
   cloud_firestore: ^4.17.5
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
